--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 
 
     <dependencies>
+
+
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
@@ -101,6 +103,14 @@
             <artifactId>logback-core</artifactId>
             <version>1.2.3</version>
         </dependency>
+
+        <!--        高性能内存队列-->
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.4.2</version>
+        </dependency>
+
 
     </dependencies>
 
