--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,17 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <netty.version>4.1.32.Final</netty.version>
+        <pool2.version>2.3</pool2.version>
+        <lombok.version>1.18.12</lombok.version>
+        <logback.version>1.2.3</logback.version>
+        <disruptor.version>3.4.2</disruptor.version>
+        <hutool.version>5.4.2</hutool.version>
+        <hessian.version>4.0.62</hessian.version>
+        <han.version>1.0.2-RELEASE</han.version>
+        <protobuffer.version>1.4.0</protobuffer.version>
+        <objenesis.version>2.1</objenesis.version>
+        <junit.version>4.12</junit.version>
     </properties>
 
 
@@ -19,19 +30,19 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.32.Final</version>
+            <version>${netty.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.hanframework</groupId>
             <artifactId>common-toolkit</artifactId>
-            <version>1.0.2-RELEASE</version>
+            <version>${han.version}</version>
         </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -39,77 +50,63 @@
         <dependency>
             <groupId>com.caucho</groupId>
             <artifactId>hessian</artifactId>
-            <version>4.0.62</version>
+            <version>${hessian.version}</version>
         </dependency>
 
         <!--google在原来的protobuffer是的优化产品。使用起来也比较简单易用，目前效率也是最好的一种序列化工具。-->
         <dependency>
             <groupId>io.protostuff</groupId>
             <artifactId>protostuff-core</artifactId>
-            <version>1.4.0</version>
+            <version>${protobuffer.version}</version>
         </dependency>
         <dependency>
             <groupId>io.protostuff</groupId>
             <artifactId>protostuff-runtime</artifactId>
-            <version>1.4.0</version>
+            <version>${protobuffer.version}</version>
         </dependency>
         <dependency>
             <groupId>org.objenesis</groupId>
             <artifactId>objenesis</artifactId>
-            <version>2.1</version>
+            <version>${objenesis.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
-            <version>2.3</version>
+            <version>${pool2.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.12</version>
+            <version>${lombok.version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <version>${logback.version}</version>
         </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>1.2.3</version>
+            <version>${logback.version}</version>
         </dependency>
 
         <!--        高性能内存队列-->
         <dependency>
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
-            <version>3.4.2</version>
+            <version>${disruptor.version}</version>
         </dependency>
 
-
-        <!--jmh 基准测试 -->
-        <dependency>
-            <groupId>org.openjdk.jmh</groupId>
-            <artifactId>jmh-core</artifactId>
-            <version>1.23</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjdk.jmh</groupId>
-            <artifactId>jmh-generator-annprocess</artifactId>
-            <version>1.23</version>
-            <scope>provided</scope>
-        </dependency>
-
+        <!--        工具包-->
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.4.2</version>
+            <version>${hutool.version}</version>
         </dependency>
 
     </dependencies>
@@ -122,6 +119,23 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.2</version>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <!-- 项目版本号 -->
+                            <Project-Version>${project.version}</Project-Version>
+                            <!-- 时间戳 -->
+                            <Timestamp>${maven.build.timestamp}</Timestamp>
+                            <Implementation-Version>${project.version}</Implementation-Version>
+                        </manifestEntries>
+                    </archive>
                 </configuration>
             </plugin>
         </plugins>
