--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: java
 jdk:
   - openjdk8
 script: mvn package
-install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true
+install: mvn clean
